@@ -6,3 +6,4 @@
 .tox
 coverage-report
 report.xml
+work
