@@ -37,13 +37,13 @@ class Maildir(object):
 
         if create and not access(path):
             os.mkdir(path)
-            os.chmod(path, 0777)
+            os.chmod(path, 0o777)
             os.mkdir(subdir_cur)
-            os.chmod(subdir_cur, 0777)
+            os.chmod(subdir_cur, 0o777)
             os.mkdir(subdir_new)
-            os.chmod(subdir_new, 0777)
+            os.chmod(subdir_new, 0o777)
             os.mkdir(subdir_tmp)
-            os.chmod(subdir_tmp, 0777)
+            os.chmod(subdir_tmp, 0o777)
             maildir = True
         else:
             maildir = (os.path.isdir(subdir_cur) and os.path.isdir(subdir_new)
@@ -84,9 +84,9 @@ class Maildir(object):
                                       random.randrange(randmax))
             filename = join(subdir_tmp, unique)
             try:
-                fd = os.open(filename, os.O_CREAT|os.O_EXCL|os.O_WRONLY, 0666)
-                os.chmod(filename, 0666)
-            except OSError, e:
+                fd = os.open(filename, os.O_CREAT|os.O_EXCL|os.O_WRONLY, 0o666)
+                os.chmod(filename, 0o666)
+            except OSError as e:
                 if e.errno != errno.EEXIST:
                     raise
                 # File exists
@@ -143,4 +143,3 @@ class MaildirMessageWriter(object):
             os.unlink(self._filename)
 
     # XXX: should there be a __del__ that calls abort()?
-
