@@ -1,8 +1,17 @@
-from html2text import html2text
-from htmlentitydefs import entitydefs
-import email.Header
+from html2text import HTML2Text
 import logging
 import re
+
+try:
+    from email.Header import make_header
+    from htmlentitydefs import entitydefs
+    text_type = unicode
+    bytes_type = str
+except ImportError:
+    from email.header import make_header
+    from html.entities import entitydefs
+    text_type = str
+    bytes_type = bytes
 
 
 def intEnt(m):
@@ -18,9 +27,12 @@ def xEnt(m):
 def nameEnt(m):
     m = m.groups(1)[0]
     if m in entitydefs.keys():
-        return entitydefs[m].decode('latin1')
+        val = entitydefs[m]
+        if not isinstance(val, text_type):
+            val = val.decode('latin1')
+        return val
     else:
-        return '&' + m +';'
+        return '&' + m + ';'
 
 
 def expandNumEntities(text):
@@ -39,18 +51,22 @@ def fixQuotes(text):
     return text
 
 
+def html2text(text):
+    h = HTML2Text()
+    h.inline_links = False
+    return h.handle(text)
+
+
 def header(text):
     if not text:
         text = ''
-    if not isinstance(text, unicode):
+    if not isinstance(text, text_type):
         text = text.decode('latin1')
-    if isinstance(text, unicode):
-        text = text.encode('utf-8')
     try:
         text = html2text(text).strip()
     except UnicodeError:
         pass
-    return str(email.Header.make_header([(text, 'utf-8')]))
+    return make_header([(text, 'utf-8')]).encode()
 
 
 def setupLogging(logfile='log'):
