@@ -1,11 +1,10 @@
 [tox]
-envlist = py27
+envlist = py27, py35
 minversion = 1.6
 
 [testenv]
 deps =
     pytest
     pytest-cov
-commands = py.test
-install_command = pip install --egg {opts} {packages}
+commands = pytest
 usedevelop = True
