@@ -6,6 +6,8 @@ CHANGES
 
 - Switch from urllib2 to requests.
 
+- Make Python-3 compatible.
+
 
 2.0 (2014-02-22)
 ----------------
